Project

General

Profile

Actions

Bug #20280

closed

Error at invalid encoding symbols

Bug #20280: Error at invalid encoding symbols

Added by nobu (Nobuyoshi Nakada) over 2 years ago. Updated over 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:116838]

Description

Parsing an invalid encoding symbol raises an EncodingError.
It must be a SyntaxError.

https://github.com/ruby/ruby/pull/10014

Actions

Also available in: PDF Atom