[Bug #20280] Raise SyntaxError on invalid encoding symbol