test/ruby/test_syntax.rb
@@ -1365,13 +1365,17 @@ eom
     assert_valid_syntax 'p :foo, {proc do end => proc do end, b: proc do end}', bug13073
   end
 
+  def test_invalid_encoding_symbol
+    assert_syntax_error('{"\xC3": 1}', "invalid symbol")
+  end
+
   def test_invalid_symbol_in_hash_memory_leak
     assert_no_memory_leak([], "#{<<-'begin;'}", "#{<<-'end;'}", rss: true)
       str = '{"\xC3": 1}'.force_encoding("UTF-8")
       code = proc do
         eval(str)
         raise "unreachable"
-      rescue EncodingError
+      rescue SyntaxError
       end
 
       1_000.times(&code)
